--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 
-<head>
+<link>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, minimal-ui">
     <meta content="yes" name="apple-mobile-web-app-capable">
@@ -10,7 +10,9 @@
     <meta name="full-screen" content="yes">
     <meta name="x5-fullscreen" content="true">
     <title></title>
-<link href="dist/app.css?9414eb0939317a09da0d" rel="stylesheet"></head>
+    <link href="//at.alicdn.com/t/font_395174_t9a1gi5zwrlo9a4i.css" rel="stylesheet">
+    <link href="dist/app.css?9414eb0939317a09da0d" rel="stylesheet">
+</head>
 
 <body>
 <script type="text/javascript" src="dist/app.js?9414eb0939317a09da0d"></script></body>
