--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
     <meta name="full-screen" content="yes">
     <meta name="x5-fullscreen" content="true">
     <title></title>
-    <link href="//at.alicdn.com/t/font_395174_lmlt8snod8bvgqfr.css" rel="stylesheet">
+    <link href="http://at.alicdn.com/t/font_395174_41v0280lk949rudi.css" rel="stylesheet">
     <link href="dist/app.css?9414eb0939317a09da0d" rel="stylesheet">
 </head>
 
 <body>
+<script type="text/javascript" src="cordova.js"></script>
 <script type="text/javascript" src="dist/app.js?9414eb0939317a09da0d"></script></body>
 
 </html>
