--- a/index.html
+++ b/index.html
@@ -15,7 +15,85 @@
 </head>
 
 <body>
-<script type="text/javascript" src="cordova.js"></script>
-<script type="text/javascript" src="dist/app.js?9414eb0939317a09da0d"></script></body>
+<script type="text/javascript" src="http://webapi.amap.com/maps?v=1.3&key=5a10e31857eeb6d930c04cde1ecf81db&plugin=AMap.Autocomplete"></script>
 
+<div id='container'></div>
+<div id="tip">
+
+</div>
+<span id="result"  style="padding-bottom:100px">1111</span>
+<script type="text/javascript">
+    /***************************************
+     由于Chrome、IOS10等已不再支持非安全域的浏览器定位请求，为保证定位成功率和精度，请尽快升级您的站点到HTTPS。
+     ***************************************/
+    var map, geolocation;
+    //加载地图，调用浏览器定位服务
+    map = new AMap.Map('container', {
+        resizeEnable: true
+    });
+    map.plugin('AMap.Geolocation', function() {
+        geolocation = new AMap.Geolocation({
+            enableHighAccuracy: true,//是否使用高精度定位，默认:true
+            timeout: 10000,          //超过10秒后停止定位，默认：无穷大
+            buttonOffset: new AMap.Pixel(10, 20),//定位按钮与设置的停靠位置的偏移量，默认：Pixel(10, 20)
+            zoomToAccuracy: true,      //定位成功后调整地图视野范围使定位位置及精度范围视野内可见，默认：false
+            buttonPosition:'RB'
+        });
+        map.addControl(geolocation);
+        geolocation.getCurrentPosition();
+        AMap.event.addListener(geolocation, 'complete', onComplete);//返回定位信息
+        AMap.event.addListener(geolocation, 'error', onError);      //返回定位出错信息
+    });
+    //解析定位结果
+    function onComplete(data) {
+        var str=['定位成功'];
+        str.push('经度：' + data.position.getLng());
+        str.push('纬度：' + data.position.getLat());
+        var lnglatXY = new AMap.LngLat(data.position.getLng(), data.position.getLat());
+
+        //drawImage();
+        map.plugin(["AMap.Geocoder"], function() {
+            MGeocoder = new AMap.Geocoder({});
+            //返回地理编码结果
+            AMap.event.addListener(MGeocoder, "complete", geocoder_CallBack2);
+            //逆地理编码
+            MGeocoder.getAddress(lnglatXY);
+        });
+        function geocoder_CallBack2(data) { //回调函数
+            alert(data.regeocode.formattedAddress)
+        }
+        if(data.accuracy){
+            str.push('精度：' + data.accuracy + ' 米');
+        }//如为IP精确定位结果则没有精度信息
+        str.push('是否经过偏移：' + (data.isConverted ? '是' : '否'));
+        document.getElementById('tip').innerHTML = str.join('<br>');
+    }
+    //解析定位错误信息
+    function onError(data) {
+        document.getElementById('tip').innerHTML = '定位失败';
+    }
+    //已知点坐标
+    function regeocoder(x,y) {  //逆地理编码
+        lnglatXY = [x, y];
+        var geocoder = new AMap.Geocoder({
+            radius: 1000,
+            extensions: "all"
+        });
+        geocoder.getAddress(lnglatXY, function(status, result) {
+            if (status === 'complete' && result.info === 'OK') {
+                geocoder_CallBack(result);
+            }
+        });
+        var marker = new AMap.Marker({  //加点
+            map: map,
+            position: lnglatXY
+        });
+        map.setFitView();
+    }
+    function geocoder_CallBack(data) {
+        var address = data.regeocode.formattedAddress; //返回地址描述
+        document.getElementById("result").innerHTML = address;
+    }
+</script>
+</body>
 </html>
