--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <title></title>
     <link href="http://at.alicdn.com/t/font_395174_wl6cc40cfe5yu8fr.css" rel="stylesheet">
     <link href="dist/app.css?abcdf" rel="stylesheet">
+    <script>
+        var $A = 'http://47.94.230.18/motor/extTelSendCode.ext'; //发送短信验证码
+        var $extTelMsgLogin = 'http://47.94.230.18/motor/extTelMsgLogin.ext'; //免密登录
+    </script>
 </head>
 
 <body>
