--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
         var $extEvaluateFindPageByMo = BASE + 'extEvaluateFindPageByMo.ext'; //车辆的评价
         var $extEvaluateFindPageByUser = BASE + 'extEvaluateFindPageByUser.ext'; //我评价过的摩托车列表
 
+        var $extMotorOn = BASE + 'extMotorOn.ext'; //上架
+        var $extMotorOff = BASE + 'extMotorOff.ext'; //下架
+        var $extMotorUpdate = BASE + 'extMotorUpdate.ext'; //更新车辆信息
+
+
+
 
         Array.prototype.unique = function(){
             var res = [];
