--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 
     </script>
-<script type="text/javascript" src="http://webapi.amap.com/maps?v=1.3&key=8be9012609bdbcc8918e368acd8d3d71&plugin=AMap.Autocomplete"></script>
+<script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=Z8Ia17gDtfuvdY7V2SD0yE0QXyKZyvut"></script>
 </head>
 
 <body>
