增加个人中心板块``

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     <link href="dist/app.css?abcdf" rel="stylesheet">
     <script>
         var BASE = 'http://47.94.230.18/motor/';
+        var $extGetAdvert = BASE + 'extGetAdvert.ext'; //广告页
         var $extTelSendCode = BASE + 'extTelSendCode.ext'; //发送短信验证码
+        var $extUpdateUserInfo = BASE + 'extUpdateUserInfo.ext'; //完善用户信息
         var $extTelMsgLogin = BASE + 'extTelMsgLogin.ext'; //免密登录
         var $extFileuUpload = BASE + 'extFileuUpload.ext'; //图片上传
 
