--- a/index.html
+++ b/index.html
@@ -19,11 +19,16 @@
         var $extUpdateUserInfo = BASE + 'extUpdateUserInfo.ext'; //完善用户信息
         var $extTelMsgLogin = BASE + 'extTelMsgLogin.ext'; //免密登录
         var $extFileuUpload = BASE + 'extFileuUpload.ext'; //图片上传
+        var $extGetUserInfoById = BASE + 'extGetUserInfoById.ext'; //根据用户ID查询用户信息
 
         var $extMotorAdd = BASE + 'extMotorAdd.ext'; //车辆信息上传
         var $extMotorFindPage = BASE + 'extMotorFindPage.ext'; //查询
         var $extCollectAdd = BASE + 'extCollectAdd.ext'; //添加收藏
         var $extCollectDelete = BASE + 'extCollectDelete.ext'; //删除收藏
+        var $extNotifyAdd = BASE + 'extNotifyAdd.ext'; //添加降价提醒
+        var $extNotifyDelete = BASE + 'extNotifyDelete.ext'; //取消降价提醒
+        var $extNotifyFindPage = BASE + 'extNotifyFindPage.ext'; //查询降价提醒列表
+
         var $extCollectFindPage = BASE + 'extCollectFindPage.ext'; //我收藏过的摩托车列表
         var $extEvaluateAdd = BASE + 'extEvaluateAdd.ext'; //添加评价
         var $extEvaluateFindPageByMo = BASE + 'extEvaluateFindPageByMo.ext'; //车辆的评价
